@@ -79,6 +79,7 @@ namespace kt
 
 	void QueueManager::clear()
 	{
+		exiting = true;
 		Uint32 nd = downloads.count();
 		paused_torrents.clear();
 		
@@ -523,11 +524,11 @@ namespace kt
 	
 	void QueueManager::orderQueue()
 	{
-		downloads.sort(); // sort downloads, even when paused so that the QM widget is updated
-		if (Settings::manuallyControlTorrents())
+		if (ordering || !downloads.count() || exiting)
 			return;
 		
-		if (ordering || !downloads.count() || paused_state || exiting)
+		downloads.sort(); // sort downloads, even when paused so that the QM widget is updated
+		if (Settings::manuallyControlTorrents() || paused_state)
 			return;
 		
 		ordering = true; // make sure that recursive entering of this function is not possible
